# Copyright (C) 2022, twiinIT
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = antlr4-cli
version = attr: antlr4_cli.__version__
author = twiinIT
description = 
long_description = file: README.md
home-page = http://github/twiinit/antlr4-cli.git
license = BSD 3-clause
keywords = twiinit, antlr4
classifiers =
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8
